fix button mobile responsive issue

--- a/style.css
+++ b/style.css
@@ -49,21 +49,7 @@ body{
     background-color: rgb(0, 238, 20);
 
 }
-@media only screen and (max-width: 768px) {
-    .main-bt{
-        height: 40px;
-        width: 200px;
-        border: 1px black solid;
-        border-radius: 2px;
-        font-family: roboto;
-        font-weight: 500;
-        background-color: aqua;
-        margin-left: 30%;
-    }
-    .main-bt:hover{
-        background-color: rgb(20, 230, 20);
-    }
-}
+
 
 #about-2{
     background-color: rgb(92, 92, 92);
